--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Nathan Vegdahl <cessen@cessen.com>"]
 [dependencies]
 rand = "0.3"
 regex = "0.1"
+docopt = "0.6"
+rustc-serialize = "0.3"
